[project]
name = "python-mpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loop-rate-limiters>=1.2.0",
    "matplotlib>=3.10.8",
    "ml-collections>=1.1.0",
    "mujoco>=3.5.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
]
